Fixes for ACE-2864    SOLR 4 self test should have zero errors and failures - action=TEST passes - action=CMISTEST has no errors but some failues
git-svn-id: http://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@88088 7033f55c-6c29-4ad8-afba-765cb616e738